--- a/professional/GCE.html
+++ b/professional/GCE.html
@@ -90,7 +90,7 @@
         </div> -->
 
         <p>
-            As more and more classes have been moved to the online mode due to the interruption of COVID-19, educators should be creative in utilizing online tools in teaching, grading, and learning processes. The certification process of becoming a Google Certified Educator provides a great platform to foster innovation in integrating online tools in teaching. There are many google tools that can be incorporated in remote classrooms to enhance teaching quality and promote engagement. For example: 
+            As more and more classes have been moved to the online mode due to the interruption of COVID-19, educators should be more creative in utilizing online tools in classrooms. The certification process of becoming a Google Certified Educator provides a great platform to foster innovation in integrating online tools in teaching, grading, and learning processes. There are many google tools that can be incorporated in remote classrooms to enhance teaching quality and promote engagement. For example: 
 
             <table class="TFtable">
                 <colgroup>
@@ -108,7 +108,7 @@
                 </tr>
                 <tr>
                     <td>Google Earth</td>
-                    <td>Measure the area or length of a specific landmark</td>
+                    <td>Measure the area, perimeter or length of a specific landmark</td>
                 </tr>
                 <tr>
                     <td>Google Maps</td>
@@ -116,7 +116,7 @@
                 </tr>
                 <tr>
                     <td>Google Forms</td>
-                    <td>Set interactive quizzes where they can be marked automatically and to survey on people's opinions on different subjects</td>
+                    <td>Set interactive quizzes that can be marked automatically and survey on people's opinions on different subjects</td>
                 </tr>
                 <tr>
                     <td>Google Sites</td>
@@ -124,30 +124,59 @@
                 </tr>
                 <tr>
                     <td>Google Calendar</td>
-                    <td>Assign due dates and set up appointment slots for a specific conference</td>
+                    <td>Assign due dates and set up appointment slots for a specific conference or event</td>
                 </tr>
                 </tbody>
             </table>
         </p>
         
         <p>
-            Since I am passionate about exploring new ways of teaching, I went through the certification process. Typically, educators starts from the <a href="https://edu.google.com/teacher-center/certifications/educator-level1/?modal_active=none">Level 1 Certification</a>, which allows test takers to demonstrate fundamental knowledge in integrating Google tools for education purposes. The exam consists of several multiple choice questions and also a significant portion of practical questions based on various real-life scenarios.
+            Since I am passionate about exploring new and innovative ways of teaching, I went through this certification process. Typically, educators starts from the <a href="https://edu.google.com/teacher-center/certifications/educator-level1/?modal_active=none">Level 1 Certification</a>, which allows test takers to demonstrate fundamental knowledge in integrating Google tools for education purposes. The exam consists of several multiple choice questions and also a significant portion of practical questions based on various real-life scenarios in classrooms. Some of the basic online classroom management skills that can be acquired from this certification process are as follows (experience may vary with people; this is based on my personal experience):
+            <ul>
+                <li>sharing documents in Drive</li>
+                <li>demonstrating fundamental knowledge in Google Docs (similar to Word)</li>
+                <li>demonstrating fundamental knowledge in Google Sheet (similar to Excel)</li>
+                <li>demonstrating fundamental knowledge in Google Slides (similar to PowerPoint)</li> 
+                <li>setting up different calendars for various purposes on Google Calendar</li>
+                <li>designing and publishing websites on Google Sites</li> 
+                <li>organizing classrooms in Google Classroom</li>
+                <li>creating a group email or forum discussions on Google Group</li>
+            </ul>
         </p>
+        <p>Google provides a full fundamental training course for the Level 1 Certification <a href="https://skillshop.exceedlms.com/student/path/61209-fundamentals-training">here</a>.</p>
 
+        <h5 style="text-align:center">My Level 1 (Fundamental) Certificate</h5>
         <div class="image">
             <img src="../professional/image/GCE1.png" width="70%">
         </div>
 
         <p>
-            As I believe online technologies are essential in the new remote learning environment, I would also like to further foster my innovation and demonstrate my compentency in utilizing online technologies in my classrooms. Therefore, I also registered for the <a href="https://edu.google.com/teacher-center/certifications/educator-level2/?modal_active=none">Level 2 Certification</a>, which allows test takers to validate advanced technology integration skills in teaching and learning. The exam format was almost the same as the Level 1 exam, but the Level 2 exam covers a wider range of google tools with more advanced features.  
+            As I believe online technologies are essential in the new remote learning environment, I would also like to further foster my innovation and demonstrate my compentency in utilizing online technologies in my classrooms. Therefore, I also registered for the <a href="https://edu.google.com/teacher-center/certifications/educator-level2/?modal_active=none">Level 2 Certification</a>, which allows test takers to validate advanced technology integration skills in teaching and learning. The exam format was almost the same as the Level 1 exam, but the Level 2 exam covers a wider range of google tools with more advanced features. Some of the advanced skills that can be acquired from this certification process are as follows (experience may vary with people; this is based on my personal experience):  
+            <ul>
+                <li>creating email templates</li>
+                <li>using Google advanced search</li> 
+                <li>designing automatically-marked quizzes on Google Forms</li>
+                <li>planning a field trip by Google Maps</li>
+                <li>conducting a virtual field trip by Google Earth</li>
+                <li>making bookabale appointment slots on Google Calendar</li>
+                <li>creating and sharing a playlist in a YouTube channel</li>
+                <li>finding relevant extensions in Chrome Web Store</li>
+            </ul>
         </p>
+        <p>Google provides a full advanced training course for the Level 2 Certification <a href="https://skillshop.exceedlms.com/student/path/61210-advanced-training">here</a>.</p>
 
+        <h5 style="text-align:center">My Level 2 (Advanced) Certificate</h5>
         <div class="image">
             <img src="../professional/image/GCE2.png" width="70%">
         </div>
 
+        
+        <h3>
+            What if I am not using Google Products in Education?
+        </h3>
+        <hr>
         <p>
-            Although the certification is mainly focused on education, the skillset acquired in this certification process is also transferrable to other areas such as event management. The pandemic has also forced many activities to be conducted online, so using online tools to organize events will also become an essential skill. In addition, although the certification covers only the google products, the same skillset can also be transferrable when using other tech tools in a creative manner. Becoming a Google Certified Educator is also an indicator which shows the educator is willing to commit to professional development and lifelong learning.
+            In my opinion, many online technologies have similar functionalities. This means although the certification covers only the Google products, the same skillset can also be transferrable when using other tech tools in a creative manner. For example, Google Drive (Google product) is similar to OneDrive (Microsoft product). In addition, although the certification is mainly focused on education, the skillset acquired in this certification process is also transferrable to other areas such as event management. The pandemic has also forced many activities to be conducted online, so using online tools to organize events or conferences will also become an essential skill. Becoming a Google Certified Educator is also an indicator which shows the educator is willing to commit to professional development and lifelong learning.
         </p>
 
         <p class="enter"></p>
