--- a/professional/GPS989.html
+++ b/professional/GPS989.html
@@ -68,7 +68,7 @@
         </div>
     
         <p>
-            This is a two-term (8 months) course relating to teaching at the university level. Although the course name is "University Teaching", the course learning outcomes can also be applied in non-academic settings (e.g. coaching or business presentation). 
+            This is a full-year course relating to teaching at the university level. Although the course name is "University Teaching", the course learning outcomes can also be applied in non-academic settings (e.g. coaching or business presentation). 
         </p>
         <p>
             The course covers various topics related to communication skills, such as three modes of persuasion (Ethos, Pathos, and Logos), five teaching perspective inventory, four main learning preferences, various teaching methods, and types of academic assessment. Some practical role-play discussions are also included such as handling students with learning disabilities, diverse backgrounds, or aggressive behaviours.
@@ -86,13 +86,13 @@
             </iframe>
         </div>
         <p>
-            Teaching students with disabilities can be a huge challenge for many teachers. If there is a disabled person in our classroom, we can't avoid redesigning our teaching strategies and lesson plans to accommodate the disabled person. While people often think disabled students are a burden for educators, this course has changed my views on disabilities as I have learned that designing for disability does not just benefit disabled persons, but everyone! 
+            Teaching students with disabilities can be a huge challenge for many educators. If there is a disabled person in our classroom, we can't avoid redesigning our teaching strategies and lesson plans to accommodate persons with disabilities. While people often think disabled students are a burden for educators, this course has changed my views on disabilities as I have learned that designing for disability does not just benefit disabled persons, but everyone! 
         </p>
         <p>
-            Think about an automated door with a button designed for people with movement disabilities. Is that common for many people other than disabled people to use such a button? Yes, because it also benefits those who want to pass through the door while carrying a lot in their hands. Think about the subtitles in movies and videos. Even if I watch a movie in my own native language, subtitles in my native language help me significantly in understanding the movie. All these designs which seem to benefit the disabled persons at the end also benefit everyone in general. Why can't we apply this concept in the teaching environment as well? 
+            Think about an automated door with a button designed for people with movement disabilities. Is that common for many people other than disabled people to use such a button? Yes, because it also benefits those who want to pass through the door while carrying a lot in their hands. Think about the subtitles in movies and videos. Even if I watch a movie in my own native language, subtitles in my native language help me significantly in understanding the movie. All these designs which seem to only benefit "disabled persons" at the end also benefit everyone in general. We can also apply this simple concept in the teaching environment.
         </p>
         <p>
-            So how can we design for disability in teaching environments? Some examples include practicing a slower speaking pace, repeating key notes, finding a balance between written and oral instructions, and many more. This will not just help students with learning disabilities. Even high-performance students would appreciate educators to deliver lessons that are more inclusive too, wouldn't they? 
+            So how can we design for disability in teaching environments? Some examples include practicing a slower speaking pace, repeating key notes, finding a balance between written and oral instructions, using body languages, and many more. This will not just help students with learning disabilities. Even high-performance students would appreciate educators to deliver lessons that are more inclusive too, wouldn't they? 
         </p>
     
         <h3 id="microteaching">
