--- a/professional/summary.html
+++ b/professional/summary.html
@@ -41,7 +41,7 @@
         </h1> 
         <hr>
         <p>
-            I appreciate any opportunities for self-development in order to increase my personal capacity and serve my community more effectively. Since my mission statement is about creating an inclusive environment and integrating people, I aim to extend my boundaries to enhance my knowledge in different areas. This would allow me to connect with more people of different expertise, especially in professional team work or event management settings. After all, learning is also a continuous process in life considering we are living in a fast-evolving world. Below is a summary of my skills in several areas obtained through my on-going professional development journey.  
+            I appreciate opportunities for self-development in order to increase my personal capacities and serve my community more effectively. Since my mission statement is about creating an inclusive environment and integrating people, I aim to extend my boundaries and enhance my knowledge in different areas. This allows me to connect with more people of different expertise, especially in professional team work or event management settings. After all, learning is also a continuous process in life considering we are living in a fast-evolving world. Below is a summary of my skills in several areas obtained through my on-going journey for professional development.  
         </p>
     
         <h3>
@@ -49,8 +49,9 @@
         </h3>
         <hr>
         <div class="paragraph big-screen">
-            <span class="a">Programming</span>: &emsp; C, Python, SQL, MATLAB, MS Excel (Advanced), Visual Basic<br>
-            <span class="a">Plotting Tools</span>: &emsp; OriginLab, Tecplot - <span style="font-size: smaller;">read my <a href="../education/experimental.html">M.Sc. research</a> for some sample animations and graphs</span> <br>
+            <span class="a">Programming</span>: &emsp; C, Python, SQL, MATLAB, MS Excel (Advanced)<br>
+            <span class="a">Plotting Tools</span>: &emsp; OriginLab, Tecplot
+            <!-- <span style="font-size: smaller;">read my <a href="../education/experimental.html">M.Sc. research</a> for some sample animations and graphs</span> --> <br>
             <span class="a">Word Processor</span>: &emsp; LaTex - <span style="font-size: smaller;">read my <a href="https://harvest.usask.ca/handle/10388/12492", target="blank">M.Sc. thesis</a> for a sample LaTex document</span><br>
             <span class="a">Project Management</span>: &emsp; Primavera, MS Project <br>
             <span class="a">Computer-Aided Design</span>: &emsp; SolidWorks  <br>
