--- a/teaching/f3.html
+++ b/teaching/f3.html
@@ -45,7 +45,7 @@
             </h6>
 
             <p>
-                I was serving as a lab demonstrator during my <a href="../education/MSc.html">M.Sc.</a> program. The labs that I taught were mainly in the area of fluid mechanics, including a wind energy lab, which was performed outdoor, and a flow measurement lab which was performed in a wind tunnel. The lab was designed to help students strengthen their understanding in the engineering subjects of thermodynamics and fluid mechanics. 
+                I was serving as a lab demonstrator during my <a href="../education/MSc.html">M.Sc.</a> program. The labs that I taught were mainly in the area of fluid mechanics, including a wind energy lab, which was performed outdoor, and a flow measurement lab which was performed in an indoor wind tunnel. The lab was designed to help students strengthen their understanding in the engineering subjects of thermodynamics and fluid mechanics. 
             </p>
             <p>
                 Being a lab demonstrator during my M.Sc. program is also part of the reasons why I enrolled in a professional course - <a href="../professional/GPS989.html">Philosophy and Practice of University Teaching</a> to seek continuous opportunities for improvements in teaching.
