--- a/teaching/imas.html
+++ b/teaching/imas.html
@@ -45,7 +45,7 @@
             </h6>
 
             <p>
-                During the pandemic in 2020, I was serving as a mathematics teacher at an international high school in my home country Malaysia. My students are Malaysians, but I also had a significant portion of students who are the children of Malaysian immigrants or temporary residents. I was glad that I had a chance to support the educational needs of these foreign citizens in my country. 
+                During the pandemic in 2020, I was serving as a mathematics teacher at an international high school in my home country Malaysia. I had many Malaysian students, but I also had a significant portion of students who are the children of immigrants or temporary residents in Malaysia. I was glad that I had a chance to support the educational needs of these foreign citizens in my country. 
             </p>
             <p>
                 Due to the public health measures implemented, most of the classes were switched to the online mode. Understanding that young students have struggled on account of various difficulties due to isolation, as well as the challenges of adapting to the new online learning environment, it was necessary for me to take some extra steps as an educator such as using online platforms to make fun and interactive quizzes, providing additional lessons before the final exam, and engaging with students' parents. Occasionally, I also played some music after the class to promote the mental health of my students and motivate them to continue their next lessons. To foster my innovation and demonstrate my competency in utilizing online technologies in remote classes, I also went through the certification process of becoming a <a href="../professional/GCE.html">Google Certified Educator</a>. 
@@ -58,7 +58,7 @@
                 </div>
             </div> -->
             <p>
-                It was a wonderful experience to journey with these energetic students who were mostly passionate about math and science. I thank them for giving me some wonderful memories while I was serving this school, and I wish them all the best in their next journeys. Our (online) class photos are displayed below:  
+                It was a wonderful experience to journey with these energetic students who were mostly passionate about math and science. I thank them for giving me some wonderful memories while I was serving this school, and I wish them all the best in their next journeys. Our (online) class photos are shown below:  
             </p>
 
             <h6>
