--- a/hobbies/hiking.html
+++ b/hobbies/hiking.html
@@ -45,7 +45,7 @@
             </p>
 
             <p>
-                One of the mountains that I am particularly interested in is <a href="http://www.sabahparks.org.my/index.php/the-climb/mount-kinabalu">Mount Kinabalu</a> in Sabah, East Malaysia. It is a world heritage site, and the height of the summit is 4,095 m above the sea level. The hike can be challenging and some climbers may experience altitude sickness. For this reason, it is a regulation of Sabah Park for climbers to be accompanied by accredited local mountain guides at all times. Those climbers who successfully reach the summit will be given a certificate for their accomplishments. 
+                One of the mountains that I am particularly interested in is Mount Kinabalu in Sabah, East Malaysia. It is a world heritage site, and the height of the summit is 4,095 m above the sea level. The hike can be challenging and some climbers may experience altitude sickness. For this reason, it is a regulation of Sabah Park for climbers to be accompanied by accredited local mountain guides at all times. Those climbers who successfully reach the summit will be given a certificate for their accomplishments. 
             </p>
 
             <div class="container">
