--- a/volunteer/musical.html
+++ b/volunteer/musical.html
@@ -46,11 +46,11 @@
         </h6> 
 
         <p>
-            I served as the President of TECHFLOW, which is considered one of the most active organizations, while I was pursuing my <a href="../education/BSc.html">B.Sc. degree</a> at UNITEN. We received high financial support from the Student Affairs Centre as we were actively organizing different activities that benefit the community such as
+            I served as the President of TECHFLOW, which is considered one of the most active organizations, while I was pursuing my <a href="../education/BSc.html">undergraduate studies</a> at UNITEN. We received high financial support from the Student Affairs Centre as we were actively organizing different activities that benefit the community such as
             weekly gatherings, massive camps, outreach visits and annual musical production.
         </p>
         <p>
-            This musical play was organized annually with about 800 audience members. The profit made from this event was used for charitable purposes (e.g. donation to the indigenous community). I served at this annual event three times, one as a cast member, one as the Musical Director, and one as the President. This was a large-scale annual event, which required about 6 months of planning.
+            This musical play was organized annually with the attendance of about 800 people. The profit made from this event was used for charitable purposes (e.g. donation to the indigenous community). I served at this annual event three times, one as a cast member, one as the Musical Director, and one as the President. This was a large-scale annual event, which required about 6 months of planning.
         </p>
 
         <div class="container">
