--- a/volunteer/mooncake.html
+++ b/volunteer/mooncake.html
@@ -49,7 +49,7 @@
         </p>
 
         <p>
-            Mid-Autumn Festival is celebrated on the 15th day of the eighth month of the Chinese Lunar calendar. Similar to the Chinese New Year, it is also a festival where Chinese people gather. Our group envision our community as a big spiritual family, and organizing a mid-autumn festival in this community provides an opportunity for our members to integrate.
+            Mid-Autumn Festival is celebrated on the 15th day of the eighth month of the Chinese Lunar calendar. Similar to the Chinese New Year, it is also a festival where Chinese people gather. Our group envisions our community as a big spiritual family, and organizing a mid-autumn festival in this community provides an opportunity for our members to integrate.
         </p>
         <p>
             It is worth highlighting that although this annual event is Chinese-culture oriented, it has been consistently welcoming of many non-Chinese from our community to attend. Our group greatly values diversity, and we are proud of our strength to integrate people of different cultures and languages to celebrate this festival together.  
@@ -135,7 +135,7 @@
         </h3>
         <hr>
         <p>
-            The program also has a competition for those who are interested in art and craft work to design their own hand-made lanterns. Our group normally imposes an environmental-friendly theme for this competition, i.e. participants were challenged to utilize recyclable materials to create lanterns. By having this competition, I was also able to discover people with talents in art and creativity in my community.     
+            The program also has a competition for those who are interested in art and craft work to design their own hand-made lanterns. Our group normally imposes an environmental-friendly theme for this competition, i.e. participants were challenged to utilize recyclable materials to create their lanterns. By having this competition, I was also able to discover people with talents in art and creativity in my community.     
         </p>
 
         <div class="container">
