--- a/volunteer/volunteer.html
+++ b/volunteer/volunteer.html
@@ -119,7 +119,7 @@
         </script>
 
     <p>
-        I highly value giving back to the community and reaching out to the vulnerable people, so community involvement has been part of my life for more than 10 years. It is part of my mission statement to guide more people to discover their goals, values and strengths, and volunteering in the community offers lots of opportunities for me to execute this mission. After all, it is also a great opportunity to grow leadership skills and enhance professional development. Moreover, my volunteer experience often contributes to my wellness; having some fun time with the community is a way for me to exercise life balance by experiencing a different social lifestyle after work. 
+        I highly value giving back to the community and reaching out to vulnerable people, so community involvement has been part of my life for more than 10 years. It is part of my mission statement to guide more people to discover their goals, values and strengths, and volunteering in the community offers lots of opportunities for me to execute this mission. After all, it is also a great opportunity to grow leadership skills and enhance professional development. Moreover, my volunteer experience often contributes to my wellness; having some fun time with the community is a way for me to exercise work-life balance by experiencing a different social lifestyle after work. 
     </p>
     <p>
         Below is the summary of my selected volunteer or leadership experience. Some organizations issued the certificates of appreciation for leadership responsibilities held, and these certificates can be view by clicking the "Access" link at the right-most column. 
@@ -183,7 +183,7 @@
     </p>
 
     <p>
-        I was also awarded as the best student in extra-curricular activity involvement during my undergraduate studies at UNITEN. My extra-curricular report that highlights my student leadership and volunteer experience is available below. 
+        I was also awarded as the best student in extra-curricular activity involvement during my <a href="../education/BSc.html">undergraduate studies</a> at UNITEN. My extra-curricular report that highlights my student leadership and volunteer experience is available below. 
     </p>
 
     <div class="container">
@@ -231,7 +231,7 @@
         Creating platforms for people
     </h6>
     <p>
-        In line with my <a href="../teaching/philosophy.html">teaching philosophy statement</a>, every person is unique due to their distinct backgrounds. For this reason, each person is expected to have their own unique talents and strengths. Hence, I pledge to utilize community events as platforms to discover different talents in my community and determine how their stengths can be utilized. This is particularly important for young people who are still exploring their own interests and strengths. By giving young people more platforms and opportunities to perform, they identify their values. This can greatly motivate them to invest more efforts and time in growing their strengths. I believe leading youth to discover their values and strengths is the key to reduce criminal activities in communities.  
+        In line with my <a href="../teaching/philosophy.html">teaching philosophy statement</a>, I recognize every person is unique due to their distinct backgrounds. For this reason, each person is expected to have their own unique talents and strengths. Hence, I pledge to utilize community events as platforms to discover different talents in my community and determine how their stengths can be utilized. This is particularly important for young people who are still exploring their own interests and strengths. By giving young people more platforms and opportunities to perform, they identify their values. This can greatly motivate them to invest more efforts and time in growing their strengths. I believe leading youth to discover their values and strengths is the key to reduce criminal activities in my community.  
     </p>
 
     <h6>
