--- a/volunteer/cny.html
+++ b/volunteer/cny.html
@@ -52,7 +52,7 @@
             Chinese New Year is an important festival on the first day of the Chinese Lunar calendar where Chinese people are reunited together with their families. Our group envisions our community as a big spiritual family, and organizing a Chinese New Year dinner in this community provides an opportunity for our members to integrate.
         </p>
         <p>
-            It is worth highlighting that although this annual event is Chinese-culture oriented, it has been consistently welcoming of many non-Chinese from our community to attend. Our group greatly values diversity, and we are proud of our strength to integrate people of different cultures and languages to celebrate this festival together.    
+            It is worth highlighting that although this annual event is Chinese-culture oriented, it has been consistently welcoming many non-Chinese people from our community to attend. Our group greatly values diversity, and we are proud of our strength to integrate people of different cultures and languages to celebrate this festival together.    
         </p>
 
         <div class="container">
