--- a/volunteer/caroling.html
+++ b/volunteer/caroling.html
@@ -49,7 +49,7 @@
             I was serving at the Chinese Language Apostolate Commission of the Holy Family Church. Christmas is such a well-known festival that people in many countries celebrate with joy. My group is no exception to this, so we organize Christmas caroling every year to celebrate this festival at our members' residences. 
         </p>
         <p>
-            While many are fortunate to be able to reunite with their families during this season, it is recognized that many in this world are left lonely during this season particularly the vulnerable groups. Therefore, during my service I initiated a change to extend this Christmas carol activity beyond our own members' residences. The caroling was brought to other vulnerable groups in my community such as the seniors, the disabled people, and orphans.  
+            While many are fortunate to be able to reunite with their families during this season, it is recognized that many in this world are left lonely during this season particularly the vulnerable groups. Therefore, during my service I initiated a change to extend this Christmas carol activity beyond our own members' residences. The caroling was brought to other vulnerable groups in my community such as the seniors, the disabled people, and orphans with the intention of reducing their isolation.
         </p>
 
         <div class="container">
@@ -91,7 +91,7 @@
 
         <p>
             Choir members in my church normally lead this event since it is musical oriented. As the program coordinator, I also invited as many groups in my church as possible, even those who have not participated in this event before, 
-            to join this caroling so that more talents and resources can be integrated. Members of the youth group, the children group and the prayer group were invited to contribute in other areas such as present preparation, transportation management, communication with residence heads, etc. After all, with more participants, the vulnerable groups feel more company and their loneliness and anxiety could be reduced.   
+            to join this caroling so that more talents and resources can be integrated. Members of the youth group, the children group and the prayer group were invited to contribute in other areas such as present preparation, transportation management, communication with residence heads, etc. After all, with more participants, these vulnerable groups feel more company and their loneliness and anxiety could be reduced.   
         </p>
     <p class="enter"></p>
 
