--- a/volunteer/camp.html
+++ b/volunteer/camp.html
@@ -45,7 +45,7 @@
         </h6> 
 
         <p>
-            I served as the President of TECHFLOW, which is considered one of the most active organizations, while I was pursuing my <a href="../education/BSc.html">B.Sc. degree</a> at UNITEN. We received high financial support from the Student Affairs Centre as we were actively organizing different activities that benefit the community such as weekly gatherings, massive camps, outreach visits and annual musical production.
+            I served as the President of TECHFLOW, which is considered one of the most active organizations, while I was pursuing my <a href="../education/BSc.html">undergraduate studies</a> at UNITEN. We received high financial support from the Student Affairs Centre as we were actively organizing different activities that benefit the community such as weekly gatherings, massive camps, outreach visits and annual musical production.
         </p>
         <p>
             During my service, our committee members organized different activities such as games nights, discussion forums, and spiritual talks to gather students across the campus. One of the major activities that required massive planning was TECHFLOW Massive Camp that normally involved inter-state travel. The camp location was normally chosen to be surrounded by nature such as hills or beaches. Although the activities were organized predominantly with some spiritual purposes, it also provided some opportunities for wellness, fellowship and networking for all students regardless of religion and races.
