--- a/volunteer/agape.html
+++ b/volunteer/agape.html
@@ -45,7 +45,7 @@
         </h6> 
 
         <p>
-            AGAPE is an annual inter-state children camp program for 3 days and 2 nights, and it is organized during the year-end school holiday of primary school students in Malaysia. The participants of this camp are children of age 7 to 12. Secondary school or university students with age 13 or above can serve as volunteers. This camp is normally attended by about 350 kids with about 100 volunteers in different areas. Although it is a program organized in a church, the camp has also been welcoming many non-Christian kids to participate. The volunteers were given training before the camp, and they are sensitive to the cultural, religion, and language differences.   
+            AGAPE is an annual inter-state children camp program for 3 days and 2 nights, and it is organized during the year-end school holiday of primary school students in Malaysia. The participants of this camp are children with age between 7 to 12. Secondary school or university students with age 13 or above can serve as volunteers. This camp is normally attended by about 350 kids and about 100 volunteers in different areas. Although this is a program organized by a church organization, the camp also openly welcome many non-Christian kids to participate. The volunteers were given training before the camp, and they are sensitive to differences in cultures, religions, and languages.   
         </p>
 
         <div class="container">
@@ -66,8 +66,8 @@
         </h3>
         <hr>
         <p>
-            I took a leadership responsibility for this camp in Dec 2017 as the Deputy Director. While this camp has usually received excellent feedback from many parents, some criticism has been received stating the camp fees are considerably high for some low-income families. Therefore, one of the biggest initiatives that I was leading during my service was the introduction of the host family program. Under this program, kids were brought back to different host families near the campsite each day after the program finished. Together with my committee, 
-            I was able to source sufficient host families who were highly committed to look after the children after the program each day including the preparation of dinner, toiletries, bedrooms as well as protecting the safety and health of those children. With the introduction of this program, accommodation expenses were greatly reduced since it was generously funded by different host families. My committee managed to reduce the camp fee by 60% without a negative balance in our final financial statement! It is worth highlighting that this newly introduced host family program was not just addressing the "high camp fees" criticism received, but it also brought other benefits, which were not observed in the past years:
+            I took a leadership responsibility for this camp in Dec 2017 as the Deputy Director. While this camp has usually received excellent feedback from many parents, some criticism has been received stating the camp fees are considerably high for some low-income families. Therefore, one of the biggest initiatives that I was leading was the introduction of the host family program. Under this program, kids were brought back to different host families near the campsite each day after the program finished. Together with my committee, 
+            I was able to source sufficient host families who were highly committed to look after the children after the program each day including the preparation of dinner, toiletries, bedrooms as well as protecting the safety and health of those children. With the introduction of this program, accommodation expenses were greatly reduced since it was generously funded by different host families. My committee managed to reduce the camp fee by 60% without a negative balance in our final financial statement! It is worth highlighting that this newly introduced host family program was not just addressing the criticism of "high camp fees", but it also brought other benefits, which were not observed in the past years, such as:
             <ul>
                 <li>Giving children a home away from home throughout their camp program</li>   
                 <li>Establishing new life-long networks by connecting children and volunteers with different families</li> 
@@ -119,7 +119,7 @@
         </div>
 
         <p>
-            The safety of vulnerable children is always the priority of mine and my committee. The host families joining this program went through strict background screening. We also established a security system where these host families are required to present a valid QR code to redeem their respective children. Anyone without a valid pass or code were strictly not allowed to enter the campsite.   
+            The safety of vulnerable children is always the priority of mine and my committee. The host families joining this program went through a series of strict background screening. We also established a security system where these host families are required to present a valid QR code to redeem their respective hosted children. We arranged security officers at the entrance and strictly prohibit anyone without a valid pass or QR code from entering the campsite. One of the reasons that the AGAPE camp has been successfully run for many years is that many parents are confident with our security system for children.   
         </p>
 
         <h3>
