--- a/travel/Vatican.html
+++ b/travel/Vatican.html
@@ -44,7 +44,7 @@
             </h6> 
 
             <p>
-                Vatican City is the smallest country in the world, yet the city has the largest basilica in the world - St Peter's Basilica. It is common for people to visit this small but unique country while visiting Rome. Vatican City is located the headquarters of the Roman Catholic Church, and it is also the place where the Pope resides.      
+                Vatican City is the smallest country in the world, yet the city has the largest basilica in the world - St Peter's Basilica. It is common for people to visit this small but unique country while visiting Rome. Vatican City locates the headquarters of the Roman Catholic Church, and it is also the place where the Pope resides.      
             </p>
 
             <div class="container">
