--- a/travel/Poland.html
+++ b/travel/Poland.html
@@ -44,7 +44,7 @@
             </h6> 
 
             <p>
-                This is my first trip going far away from my country, and therefore it was a very exciting one. I visited Poland to attend World Youth Day 2016. It is an international event organized every 2 or 3 years where youths from all over the world gather together for fellowship and spiritual purposes. Well, it is called World Youth "Day", but the program is 1 to 2-week long.      
+                This is my first trip going far away from my country, and therefore it was a very exciting one. I visited Poland to attend World Youth Day 2016. It is an international event organized every 2 or 3 years where youths from all over the world gather together for fellowship and spiritual purposes. Well, it is called World Youth "Day", but the program is actually 1-week long.      
             </p>
 
             <p>
