--- a/professional/summary.html
+++ b/professional/summary.html
@@ -202,6 +202,13 @@
                 <td>Ninety Five Percent</td>
                 <td><a href="../pdf/2015-08 Versatile Communicator.pdf" target="_blank">Access</a></td>
             </tr>
+            <tr>
+                <td>July 2013</td>
+                <td>Level 1 TRIZ practitioner</td>
+                <td>International TRIZ Association</td>
+                <td><a href="../pdf/2013-07 TRIZ.pdf" target="_blank">Access</a></td>
+            </tr>
+            
             </tbody>
         </table>
     
@@ -260,6 +267,12 @@
                 <td>Professional Skill Set for Oil & Gas Industry</td>
                 <td>Anugerah Consultant</td>
                 <td><a href="../pdf/2014-03 Professional Skillset for O&G.pdf" target="_blank">Access</a></td>
+            </tr>
+            <tr>
+                <td>Sep 2013</td>
+                <td>Non Destructive Testing Methods</td>
+                <td>TNB Integrated Learning Solutions</td>
+                <td><a href="../pdf/2013-09 NDT Training.pdf" target="_blank">Access</a></td>
             </tr>
             </tbody>
         </table>
